environments/gloo-gateway/gateway-api/1.18/ai-gateway/field-demo/demos/lb-failover-demo/failover/local-to-local/failover-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ollama-qwen-failover
  namespace: gloo-system
spec:
  parentRefs:
  - name: ai-gateway
    namespace: gloo-system
  rules:
  - backendRefs:
    - group: gloo.solo.io
      kind: Upstream
      name: aig-failover
      namespace: gloo-system
    filters:
    - extensionRef:
        group: gateway.solo.io
        kind: RouteOption
        name: ollama-qwen-failover-route-policies
      type: ExtensionRef
    matches:
    - path:
        type: PathPrefix
        value: /failover
